logs/pynotebook.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynotebook'...
Compiling './lib/python3.5/site-packages/pynotebook/cerealizer.py'...
***   File "./lib/python3.5/site-packages/pynotebook/cerealizer.py", line 621
    for i in l: print i
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynotebook/graphics.py'...
***   File "./lib/python3.5/site-packages/pynotebook/graphics.py", line 116
    def __init__(self, (x, y)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/nbbuilder.py'...
***   File "./lib/python3.5/site-packages/pynotebook/nbbuilder.py", line 60
    print "handler=", handler
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynotebook/nbview.py'...
***   File "./lib/python3.5/site-packages/pynotebook/nbview.py", line 405
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/pyclient.py'...
***   File "./lib/python3.5/site-packages/pynotebook/pyclient.py", line 84
    def __call__(self, toktype, toktext, (srow,scol), (erow,ecol), line):
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/textformat.py'...
***   File "./lib/python3.5/site-packages/pynotebook/textformat.py", line 107
    print totext(m)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynotebook/textmodel'...
Compiling './lib/python3.5/site-packages/pynotebook/textmodel/properties.py'...
***   File "./lib/python3.5/site-packages/pynotebook/textmodel/properties.py", line 26
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/textmodel/styles.py'...
***   File "./lib/python3.5/site-packages/pynotebook/textmodel/styles.py", line 290
    print i, iterator.n, iterator.style
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynotebook/textmodel/texeltree.py'...
***   File "./lib/python3.5/site-packages/pynotebook/textmodel/texeltree.py", line 784
    print "not a list or tuple", type(l), l.__class__ # XXX remove this
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/textmodel/textmodel.py'...
***   File "./lib/python3.5/site-packages/pynotebook/textmodel/textmodel.py", line 44
    print " "*indent+"%i:%i %s" % (i0, i0+length(texel), s)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynotebook/wxtextview'...
Compiling './lib/python3.5/site-packages/pynotebook/wxtextview/boxes.py'...
***   File "./lib/python3.5/site-packages/pynotebook/wxtextview/boxes.py", line 93
    print " "*indent, "[%i:%i]" % (i, i+len(self)), x, y,
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/wxtextview/builder.py'...
***   File "./lib/python3.5/site-packages/pynotebook/wxtextview/builder.py", line 61
    print "handler=", handler
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynotebook/wxtextview/simplelayout.py'...
***   File "./lib/python3.5/site-packages/pynotebook/wxtextview/simplelayout.py", line 78
    print i1, i2, repr(box)[:50]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynotebook/wxtextview/textview.py'...
***   File "./lib/python3.5/site-packages/pynotebook/wxtextview/textview.py", line 59
    print "join"
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pynotebook-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
